<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/profile_sheet"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:src="@drawable/ic_baseline_person_pin_24"
                        android:scaleType="fitCenter"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginTop="12dp"
                            android:hint="@string/full_name"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/name_et"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:hint="@string/age"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:id="@+id/age_et"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_gender"
                    android:layout_margin="12dp"
                    android:textSize="17sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

            <RadioGroup
                    android:id="@+id/radioGroup"
                    android:checkedButton="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="12dp">

                <RadioButton
                        android:id="@+id/radio_button_female"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/gender_female"
                        android:checked="true"/>

                <RadioButton
                        android:id="@+id/radio_button_male"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/gender_male"/>

                <RadioButton
                        android:id="@+id/radio_button_other"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/gender_other"/>

            </RadioGroup>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interested_in"
                    android:layout_margin="12dp"
                    android:textSize="17sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:id="@+id/preferred_gender_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="vertical">

                <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/preferred_radio_button_female"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/gender_female"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/preferred_radio_button_male"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/gender_male"/>

                <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/preferred_radio_button_other"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/gender_other"/>

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="8dp">

            <Button
                    android:text="@string/save_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/save_btn"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimaryDark" />

            <Button
                    android:text="@string/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/logout_btn"
                    android:layout_weight="1"
                    android:layout_marginEnd="12dp"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimaryDark"/>

        </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>